Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app-container
          image: flaskapp
          ports:
            - containerPort: 5002  

          resources:   
            limits:
              cpu: "1"   
              memory: "512Mi"   
            requests:
              cpu: "0.5"   
              memory: "128Mi" 
              
          readinessProbe:
            httpGet:
              path: /           
              port: 5002
            initialDelaySeconds: 10   
            periodSeconds: 5         

          livenessProbe:
            httpGet:
              path: /           
              port: 5002
            initialDelaySeconds: 30   
            periodSeconds: 10
