Kubernetes/deployment_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  selector:
    app: flask-app
  type: LoadBalancer
  ports:
      - port: 80 
        targetPort: 5002
